# loqculate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  comparison_report.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: _helpers.py  bench_empirical.py  bench_fit.py  bench_knot_vs_curvefit.py  bench_n_concentrations.py  bench_n_replicates.py  bench_real_data.py  bench_scale.py  bench_simulation.py  bench_vectorized_boot.py  bench_window_rules.py  gen_comparison_plots.py
data/full/: metadata_dataSearchedTogether1ng-PinoFormat.csv
loqculate/: __init__.py  cli.py  config.py
loqculate/compat/: __init__.py  cv.py  wls.py
loqculate/io/: __init__.py  multiplier.py
loqculate/models/: __init__.py  base.py  cv_empirical.py  piecewise_cf.py  piecewise_wls.py
loqculate/plotting/: __init__.py  calibration.py  comparison.py  cv_profile.py
loqculate/testing/: __init__.py  scenarios.py  simulator.py
loqculate/utils/: __init__.py  bootstrap.py  cv.py  knot_search.py  normal_equations.py  threshold.py  validation.py  weights.py
tests/: conftest.py  test_compat.py  test_knot_search.py  test_normal_equations.py  test_regression.py  test_regression_v030.py
tests/fixtures/: spectronaut_sample.tsv
v2/loqculate/: __init__.py  cli.py  config.py
v2/loqculate/io/: multiplier.py  readers.py  writers.py
v2/loqculate/models/: __init__.py  cv_empirical.py  piecewise_wls.py
v2/loqculate/plotting/: calibration.py
v2/loqculate/testing/: __init__.py
v2/loqculate/utils/: bootstrap.py  threshold.py  weights.py
v2/tests/: conftest.py  test_base.py  test_edge_cases.py  test_io.py  test_regression.py  test_threshold.py
v2/tests/fixtures/: conc_map.csv  diann_matrix_sample.pr_matrix.tsv  diann_report_sample.tsv  encyclopedia_sample.elib.peptides.txt  generic_sample.csv  skyline_sample.csv
